kubernetes/flux/production/loki/ingress.grafana.yaml
apiVersion: v1
kind: List
metadata:
  resourceVersion: ""
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:00005:certificate/157f92e5-0f11-4fb5-acf6-87d11b0a8e1c
      alb.ingress.kubernetes.io/healthcheck-path: /login
      alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/target-type: ip
      kubernetes.io/ingress.class: alb
      meta.helm.sh/release-name: grafana
      meta.helm.sh/release-namespace: monitoring
    labels:
      app: grafana
      app.kubernetes.io/managed-by: Helm
      helm.toolkit.fluxcd.io/name: loki-stack
      helm.toolkit.fluxcd.io/namespace: monitoring
    name: grafana-ingress
    namespace: monitoring
  spec:
    rules:
    - host: grafana.production.pintv.systems
      http:
        paths:
        - backend:
            service:
              name: monitoring-stack-grafana
              port:
                number: 80
          pathType: ImplementationSpecific
